--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 timezone: Europe/London
 title: House of Commons Library Open Day
 description: An open day for librarians and information officers
+kramdown:  
+  parse_block_html: true
+
+
