--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+# theme: jekyll-theme-minimal
 title: House of Commons Library Open Day
 description: An open day for librarians and information officers
