try remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 # theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
 title: House of Commons Library Open Day
 description: An open day for librarians and information officers
